# agent-research

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  app.py  pyproject.toml  tests.ipynb
.github/workflows/: deploy.yml  sync-sdk.yml  update-sdk.yml
a2a_service/: agent_card.py  executor.py  server.py
agents/: agent.py
auth/: jwt.py
database/: auth.py  memory.py  mongo.py  vector_db.py
tools/: arxiv_retriever.py  db_queries.py
