[project]
name = "agent-research"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "arxiv (>=2.4.1,<3.0.0)",
    "langchain (>=1.2.12,<2.0.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "langchain-nvidia-ai-endpoints (>=1.2.0,<2.0.0)",
    "langchain-pinecone (>=0.2.13,<0.3.0)",
    "pymupdf (>=1.27.2,<2.0.0)",
    "pymupdf4llm (>=1.27.2.1,<2.0.0.0)",
    "langchain-text-splitters (>=0.3.0,<0.4.0)",
    "motor (>=3.7.0,<4.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
]

[tool.poetry.dependencies]
agent-sdk = { path = "./agent-sdk", develop = true }

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
