[project]
name = "agent-research"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain (>=1.2.12,<2.0.0)",
    "langgraph (>=1.0.10,<2.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "a2a-sdk (>=0.2.0)",
    "langchain-mcp-adapters (>=0.1.0)",
    "mem0ai (>=1.0.5,<2.0.0)",
]

[tool.poetry.dependencies]
agent-sdk = { path = "./agent-sdk", develop = true }

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
